Correct bug on he z-index of the navbar vs z-index of the banner

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -6,7 +6,7 @@
   width: $width-nav-bar;
   position: fixed;
   height: 100%;
-  z-index: 2;
+  z-index: 3;
   top: 0;
   left: 0;
   background: $color-primary-600;
@@ -140,7 +140,7 @@
   position: fixed;
   max-width: calc(100vw - 100px);
   border-right: $color-primary-600 solid 2px;
-  z-index: 1;
+  z-index: 2;
   top: 0;
   left: -100%;
   height: 100vh;
